feat(employee): checkout employee files from feat/employee-flow-duy into dev/Dung